--- a/index.html
+++ b/index.html
@@ -37,17 +37,22 @@
                 <input type="text" id="salary" class="filter-input" value="150,000" placeholder="e.g. 150,000"
                     inputmode="numeric">
             </div>
-            <div class="filter-group">
+            <div class="filter-group search-container">
                 <label for="occupation">Occupation</label>
-                <select id="occupation" class="filter-select">
-                    <option value="">Loading...</option>
-                </select>
+                <input type="text" id="occupation" class="filter-input" placeholder="Search occupation..."
+                    autocomplete="off">
+                <input type="hidden" id="occupation-value">
+                <div id="occupation-results" class="search-results"></div>
             </div>
-            <div class="filter-group">
+            <div class="filter-group search-container">
                 <label for="state-filter">State</label>
-                <select id="state-filter" class="filter-select">
-                    <option value="">(All States)</option>
-                </select>
+                <div class="input-with-clear">
+                    <input type="text" id="state-filter" class="filter-input" placeholder="Search state..."
+                        autocomplete="off">
+                    <button type="button" id="state-clear" class="input-clear-btn" title="Clear">✕</button>
+                </div>
+                <input type="hidden" id="state-filter-value">
+                <div id="state-results" class="search-results"></div>
             </div>
             <div class="filter-group">
                 <label for="county-filter">County</label>
@@ -66,6 +71,11 @@
             <div class="map-container">
                 <div id="map"></div>
                 <div class="tooltip" id="tooltip"></div>
+                <div class="zoom-controls">
+                    <button id="zoom-in" class="zoom-btn" title="Zoom In">+</button>
+                    <button id="zoom-out" class="zoom-btn" title="Zoom Out">−</button>
+                    <button id="zoom-reset" class="zoom-btn zoom-reset" title="Reset View">⌂</button>
+                </div>
             </div>
             <aside class="legend">
                 <div class="legend-item">
