--- a/index.html
+++ b/index.html
@@ -220,6 +220,10 @@
                     target="_blank"
                     style="color: #cbd5e1; text-decoration: underline;">https://flag.dol.gov/wage-data/wage-search</a>
             </p>
+            <p style="margin-top: 8px; font-size: 0.9em; opacity: 0.8;">
+                Built with ❤️ by <a href="https://github.com/sriksven" target="_blank"
+                    style="color: #cbd5e1; text-decoration: underline;">sriksven</a>
+            </p>
         </footer>
     </div>
 
